Fixed dropdown on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -35,10 +35,11 @@ img {
 
 .drop {
     background-color: transparent;
-    padding: none;
+    display: flex;
     font-size: 35px;
     border: none;
     cursor: pointer;
+    outline: none;
 }
 
 .dropdown {
